--- a/DiceDistributedGameApplication/DiceDistributedGameApplication.csproj
+++ b/DiceDistributedGameApplication/DiceDistributedGameApplication.csproj
@@ -6,15 +6,29 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ActorSystemFolder\DiceGameActorSystem.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Akka" Version="1.3.5" />
+    <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.0-alpha2-final" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DiceDistributedGame.Actors\DiceDistributedGame.Actors.csproj" />
+    <ProjectReference Include="..\DiceDistributedGame.Model\DiceDistributedGame.Model.csproj" />
   </ItemGroup>
 
 </Project>
